--- a/web/sites/default/files/sync/views.view.house.yml
+++ b/web/sites/default/files/sync/views.view.house.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.card_house
     - node.type.casa
+    - system.menu.main
   module:
     - node
     - user
@@ -190,25 +191,37 @@ display:
       tags: {  }
   page_1:
     id: page_1
-    display_title: Page
+    display_title: Casas
     display_plugin: page
     position: 1
     display_options:
+      arguments: {  }
+      defaults:
+        arguments: false
+      display_description: ''
       display_extenders: {  }
       path: listado-de-casas
+      menu:
+        type: normal
+        title: Casas
+        description: ''
+        weight: 0
+        expanded: false
+        menu_name: main
+        parent: ''
+        context: '0'
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
   page_2:
     id: page_2
-    display_title: 'Página 2'
+    display_title: Casa
     display_plugin: page
     position: 2
     display_options:
@@ -221,16 +234,17 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: numeric
-          default_action: empty
+          default_action: default
           exception:
             value: all
             title_enable: false
             title: All
           title_enable: false
           title: ''
-          default_argument_type: fixed
+          default_argument_type: raw
           default_argument_options:
-            argument: ''
+            index: 1
+            use_alias: false
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -244,7 +258,7 @@ display:
           specify_validation: true
           validate:
             type: 'entity:node'
-            fail: empty
+            fail: 'not found'
           validate_options:
             bundles:
               casa: casa
@@ -255,6 +269,7 @@ display:
           not: false
       defaults:
         arguments: false
+      display_description: ''
       display_extenders: {  }
       path: listado-de-casas
     cache_metadata:
